--- a/TH4/TH4/app.json
+++ b/TH4/TH4/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "TH4_GD_3a",
-    "slug": "TH4_GD_3a",
+    "name": "TH4",
+    "slug": "TH4",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
