--- a/TH4/TH4/package.json
+++ b/TH4/TH4/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "th4_gd_3a",
+  "name": "th4",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,13 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~46.0.9",
+    "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5",
-    "react-native-web": "~0.18.7",
-    "react-dom": "18.0.0",
-    "react-native-webview": "11.23.0"
+    "react-native": "0.69.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
