--- a/DoanKieuMyNgoc_KTTH/package.json
+++ b/DoanKieuMyNgoc_KTTH/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "19446111_doankieumyngoc_ktra_th_ddnc",
+  "name": "doankieumyngoc_ktth",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
